--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,4 +1,6 @@
 $color-primary: rgb(32, 36, 36);
 $color-primary-lighten: lighten($color-primary, 5%);
 
+$color-secondary: orangered;
+
 $color-white: white;
