--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,7 +2,11 @@
   &__container {
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(to right, rgba($color-primary, 0.9), rgba($color-primary-lighten, 0.9));
+    background-image: linear-gradient(
+      to right, 
+      rgba($color-primary, 0.9), 
+      rgba($color-primary-lighten, 0.9)
+    );
     overflow: hidden;
   }
 
