--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -62,6 +62,14 @@
   &__nav--container--active {
     opacity: 1;
     width: 20vw;
+
+    display: grid;
+    grid-template-columns: minmax(min-content, max-content);
+    grid-template-rows: repeat(2, minmax(min-content, 1fr));
+
+    align-content: center;
+    justify-content: center;
+
     transition: all 0.3s 0.3s cubic-bezier(0.86, 0, 0.07, 1);
   }
 
@@ -72,7 +80,7 @@
 
     display: grid;
     grid-template-columns: minmax(min-content, 1fr);
-    grid-template-rows: repeat(5, minmax(min-content, 5rem)) minmax(min-content, 1fr);
+    grid-template-rows: repeat(5, minmax(min-content, 5rem));
     padding-top: 10rem;
 
     align-content: flex-start;
@@ -105,12 +113,7 @@
       text-decoration: none;
       text-transform: uppercase;
 
-      background-image: linear-gradient(
-          120deg, 
-          transparent 0%, 
-          transparent 50%, 
-          $color-white 50%
-        );
+      background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
       background-size: 240%;
       transition: all 0.3s;
     }
@@ -121,5 +124,27 @@
       color: $color-secondary;
       transform: translateX(1rem);
     }
+  }
+
+  // Icons
+  &__icons--active {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 2rem;
+  }
+
+  &__icons {
+    display: none;
+  }
+
+  &__icon {
+    cursor: pointer;
+    transition: transform 0.2s;
+  }
+
+  &__icon:hover {
+    transform: scale(1.2);
   }
 }
