--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -27,3 +27,14 @@
     border-color: black;
   }
 }
+
+//Animation Between Routes
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
