--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -31,10 +31,24 @@
 //Animation Between Routes
 .fade-enter {
   opacity: 0;
+  position: relative;
+  top: 0;
+  left: 100rem;
   z-index: 1;
 }
 
 .fade-enter.fade-enter-active {
   opacity: 1;
-  transition: opacity 250ms ease-in;
+  left: 0;
+  transition: all 500ms ease-in;
 }
+
+// .fade-leave {
+//   opacity: 1;
+// }
+
+// .fade-leave.fade-leave-active {
+//   opacity: 0;
+//   z-index: -1;
+//   transition: all 250ms ease-in;
+// }
