Creating About page Header

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 
 // Pages
 @import './pages/home';
+@import './pages/about';
 
 // Hamburger Icons
 @import "./assets/hamburgers/hamburgers.scss";
