--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -2,5 +2,6 @@ $color-primary: rgb(32, 36, 36);
 $color-primary-lighten: lighten($color-primary, 5%);
 
 $color-secondary: orangered;
+$color-secondary-lighten: lighten($color-secondary, 5%);
 
 $color-white: white;
