Adding Box Shadow to the Menu

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -40,6 +40,7 @@
     right: 0;
     height: 100vh;
     width: 20vw;
+    box-shadow: -1px 0px 10px 1px rgba($color-primary, .6);
     overflow: hidden;
   }
 
