--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -8,6 +8,7 @@
 .button__about--header--active {
   border: 3px solid $color-white;
   padding: 1.2rem;
+  transition: all .2s ease-in;
 }
 
 .button__about--header {
