--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -37,7 +37,8 @@
         height: 100%;
         width: 100%;
         padding: 0 10rem;
-
+        animation: appear .5s ease-in;
+        
         & h1 {
           font-family: "Courgette", cursive;
           font-size: 4rem;
