Creating Quote section in About page

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -3,5 +3,6 @@ $color-primary-lighten: lighten($color-primary, 5%);
 
 $color-secondary: orangered;
 $color-secondary-lighten: lighten($color-secondary, 5%);
+$color-secondary-darken: darken($color-secondary, 5%);
 
 $color-white: white;
