--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,9 @@
 @import './components/menu';
 @import './components/button';
 
+// Layout
+@import './layout/about-header';
+
 // Pages
 @import './pages/home';
 @import './pages/about';
