--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -15,11 +15,20 @@
       height: 15rem;
       width: 100%;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
-      background: $color-secondary-darken;
-      
+      background-image: linear-gradient(to top, $color-tertiary, $color-tertiary-darken);
+
+      & h1 {
+        font-family: "Nunito", cursive;
+        font-size: 3rem;
+        font-weight: 700;
+      }
+
+      & h1:not(:last-child) {
+        margin-right: 1rem;
+      }
     }
   }
 }
