--- a/src/sass/layout/_about-steps.scss
+++ b/src/sass/layout/_about-steps.scss
@@ -2,7 +2,8 @@
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    background-color: $color-white !important;
+    background-color: $color-white;
+    @include blurboxshadow
   }
 
   &__item {
