--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 // Layout
 @import './layout/about-header';
 @import './layout/about-steps';
+@import './layout/about-skills';
 
 // Pages
 @import './pages/home';
