--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './layout/about-header';
 @import './layout/about-steps';
 @import './layout/about-skills';
+@import './layout/about-subjects';
 
 // Pages
 @import './pages/home';
