--- a/src/sass/layout/_about-subjects.scss
+++ b/src/sass/layout/_about-subjects.scss
@@ -6,7 +6,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
-  
+
   &__title {
     display: flex;
     justify-content: center;
@@ -18,13 +18,15 @@
 
   &__list {
     width: 100%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 20rem);
+
     justify-content: center;
     align-items: center;
   }
 
   &__item {
+    min-width: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
