Animating Subject Item

--- a/src/sass/layout/_about-skills.scss
+++ b/src/sass/layout/_about-skills.scss
@@ -6,7 +6,7 @@
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 20rem 12rem auto;
 
     background-color: #eceaea;
   }
