--- a/src/sass/layout/_about-subjects.scss
+++ b/src/sass/layout/_about-subjects.scss
@@ -17,6 +17,8 @@
   }
 
   &__list {
+    min-height: 10rem;
+
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, 20rem);
@@ -27,6 +29,8 @@
 
   &__item {
     min-width: 10rem;
+    opacity: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,13 +39,38 @@
     font-size: 1.2rem;
     color: $color-white;
     background-color: $color-tertiary;
-    transition: transform 0.1s ease-in;
+
+    animation: .7s appear ease-in forwards;
+    transition: all 0.1s ease-in;
 
     padding: 2rem;
     margin: 2rem;
 
     &:hover {
       transform: scale(1.1);
+    }
+
+    &--hidden {
+      opacity: 0;
+    }
+
+    &:nth-child(2){
+      animation-delay: .3s;
+    }
+    &:nth-child(3){
+      animation-delay: .4s;
+    }
+    &:nth-child(3){
+      animation-delay: .5s;
+    }
+    &:nth-child(4){
+      animation-delay: .6s;
+    }
+    &:nth-child(5){
+      animation-delay: .7s;
+    }
+    &:nth-child(6){
+      animation-delay: .8s;
     }
   }
 }
