Creating a Footer Element

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 // Component
 @import './components/menu';
 @import './components/button';
+@import './components/footer';
 
 // Layout
 @import './layout/about-header';
