--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -5,3 +5,11 @@
 .margin__left--5 {
     margin-left: 5rem;
 }
+
+.margin__right--2 {
+    margin-right: 2rem;
+}
+
+.margin__right--1 {
+    margin-right: 1rem;
+}
