Re-organizing Footer and adjusting style in About page

--- a/src/sass/layout/_about-subjects.scss
+++ b/src/sass/layout/_about-subjects.scss
@@ -2,9 +2,12 @@
   &__container {
     height: auto;
     width: 100%;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+
+    margin-bottom: 5rem;
   }
 
   &__title {
