--- a/src/sass/pages/portfolio/_portfolio.scss
+++ b/src/sass/pages/portfolio/_portfolio.scss
@@ -13,9 +13,12 @@
     &--container {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: 5rem 1fr;
+      grid-template-rows: 5rem repeat(auto-fit, 41rem);
       grid-column-gap: 1rem;
+      grid-row-gap: 2rem;
 
+      justify-content: center;
+      align-content: center;
       padding: 3rem;
       background-color: $color-grey;
     }
@@ -26,7 +29,7 @@
       grid-column-end: -1;
 
       justify-content: flex-start;
-      align-items: center;
+      align-items: baseline;
 
       & h1 {
         font-family: "Nunito", cursive;
@@ -38,8 +41,60 @@
 
     &--item {
       display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 27rem 10rem;
+      padding: 2rem;
       background: $color-white;
+      border-radius: .5rem;
       @include blurboxshadow;
+      
+      &-img {
+        height: 23rem;
+        width: 23rem;
+        overflow: hidden;
+        margin-bottom: 3rem;
+        background: $color-grey-lighten;
+
+        & img {
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+      &-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        font-family: "Nunito", cursive;
+        font-size: 2rem;        
+
+        & h4 {
+          margin-bottom: 2rem;
+        }
+      }
+
+      &-tag {
+        display: flex;
+        align-items: flex-start;
+
+        & h4 {
+          margin-left: 1rem;
+          font-weight: 400;
+          color: $color-primary-lighten;
+        }
+      }
+
+      &-dot {
+        height: 1.4rem;
+        width: 1.4rem;
+
+        content: "";
+        margin-top: .6rem;
+        border-radius: 50%;
+        background-color: $color-secondary-lighten;
+      }
     }
   }
 }
