Re-styling Pinned and creating Overall in Portfolio

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,6 +27,8 @@
 
 //Portfolio
 @import "./pages/portfolio/portfolio";
+@import "./pages/portfolio/item/item";
+@import "./pages/portfolio/overall/overall";
 
 // Hamburger Icons
 @import "./assets/hamburgers/hamburgers.scss";
