--- a/src/sass/pages/portfolio/overall/_overall.scss
+++ b/src/sass/pages/portfolio/overall/_overall.scss
@@ -4,6 +4,13 @@
     height: auto;
     width: 100vw;
 
+    padding: 7rem 2rem;
     background-color: $color-primary;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 27rem);
+    grid-template-rows: 41rem;
+    grid-column-gap: 1rem;
+    grid-row-gap: 4rem;
   }
 }
