Fixing Padding Bottom at Pinned

--- a/src/sass/pages/portfolio/_portfolio.scss
+++ b/src/sass/pages/portfolio/_portfolio.scss
@@ -19,7 +19,7 @@
 
       justify-content: center;
       align-content: center;
-      padding: 3rem;
+      padding: 3rem 3rem 5rem 3rem;
       background-color: $color-grey;
     }
 
