--- a/src/sass/pages/portfolio/overall/_overall.scss
+++ b/src/sass/pages/portfolio/overall/_overall.scss
@@ -9,8 +9,17 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, 27rem);
-    grid-template-rows: 41rem;
+    grid-template-rows: 5rem 41rem;
     grid-column-gap: 1rem;
     grid-row-gap: 4rem;
+  }
+
+  &__title {
+    grid-column-start: 1;
+    grid-column-end: -1;
+
+    color: $color-white;
+    font-family: "Nunito", cursive;
+    font-size: 2rem;
   }
 }
