--- a/src/sass/pages/portfolio/_portfolio.scss
+++ b/src/sass/pages/portfolio/_portfolio.scss
@@ -20,7 +20,14 @@
       justify-content: center;
       align-content: center;
       padding: 3rem 3rem 5rem 3rem;
-      background-color: $color-grey;
+      background-image: 
+        linear-gradient(
+          to right, 
+          rgba($color-grey-lighten, 0.7), 
+          rgba($color-grey, 0.7),
+          ),
+        url("../../../assets/images/pinned-background.jpg");
+      background-size: cover;
     }
 
     &--title {
