--- a/src/sass/pages/portfolio/item/_item.scss
+++ b/src/sass/pages/portfolio/item/_item.scss
@@ -3,21 +3,22 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 27rem 10rem;
-    padding: 2rem;
+    padding: 1rem;
     background: $color-white;
     border-radius: 0.5rem;
     @include blurboxshadow;
 
     &-img {
       height: 23rem;
-      width: 23rem;
+      width: 25rem;
       overflow: hidden;
       margin-bottom: 3rem;
       background: $color-grey-lighten;
+      overflow: hidden;
 
       & img {
-        height: 100%;
-        width: 100%;
+        height: 110%;
+        width: 160%;
       }
     }
 
@@ -29,6 +30,8 @@
 
       font-family: "Nunito", cursive;
       font-size: 2rem;
+
+      margin-left: 2rem;
 
       & h4 {
         margin-bottom: 2rem;
