--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -6,10 +6,14 @@
     margin-left: 5rem;
 }
 
+.margin__right--1 {
+    margin-right: 1rem;
+}
+
 .margin__right--2 {
     margin-right: 2rem;
 }
 
-.margin__right--1 {
-    margin-right: 1rem;
+.margin__right--3 {
+    margin-right: 3rem;
 }
