Adding Repo and Web Link to the Items and fixing Style

--- a/src/sass/pages/portfolio/item/_item.scss
+++ b/src/sass/pages/portfolio/item/_item.scss
@@ -93,5 +93,13 @@
     align-items: center;
 
     z-index: 2;
+
+    & a {
+      transition: transform .2s ease-in;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
   }
 }
