Adding Google Maps

--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -6,7 +6,7 @@
 
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: auto;
+    grid-template-rows: 10rem 40rem;
 	}
 
 	&__header {
