--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -11,7 +11,7 @@
 	&__header {
 		height: 10rem;
 		width: 100%;
-		background-color: $color-secondary;
+		background-color: $color-primary-lighten;
 
 		display: flex;
 		align-items: center;
@@ -22,5 +22,42 @@
       font-size: 4rem;
       color: $color-white;
 		}
+  }
+
+  &__content {
+    &--container {
+      height: 42.7vh;
+      width: 100vw;
+      padding: 1rem;
+
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 40.5rem);
+      grid-template-rows: 1fr;
+      grid-column-gap: 1rem;
+
+      justify-content: center;
+      background-color: $color-primary;
+    }
+
+    &--schedule {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transition: all .2s ease-in;
+      cursor: pointer;
+
+      color: $color-white;
+
+      &:hover {
+        background-color: orangered;
+      }
+
+      & h1 {
+        font-family: 'Nunito', cursive;
+        margin-top: 3rem;
+
+      }
+    }
   }
 }
