Animating Calendar with Bounce Animation

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./components/menu";
 @import "./components/button";
 @import "./components/footer";
+@import "./components/calendar-bounce";
 
 // Pages
   // Home
