--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -57,7 +57,7 @@
 		&--schedule {
 			cursor: pointer;
 			background-color: $color-secondary;
-			transition: all .7s ease-in;
+			transition: all 0.7s ease-in;
 
 			&:hover {
 				background-color: $color-tertiary;
