--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -1,55 +1,108 @@
 // Text Appear
 @keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 // Typing Animation
 @keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
+	from {
+		width: 0;
+	}
+	to {
+		width: 100%;
+	}
 }
 
 @keyframes blink {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: black;
-  }
+	from,
+	to {
+		border-color: transparent;
+	}
+	50% {
+		border-color: black;
+	}
 }
 
-// Text List 
+// Text List
 @keyframes textList {
-  0%, 16.66%, 100% {transform:translate3d(0,-33%,0);}
-  20.66%, 36.32% {transform:translate3d(0,-66%,0);}
-  40.32%,56.98% {transform:translate3d(0,-99%,0);}
-  60.98%,76.64% {transform:translate3d(0,-66%,0);}
-  80.64%,96.3% {transform:translate3d(0,-33%,0);}
+	0%,
+	16.66%,
+	100% {
+		transform: translate3d(0, -33%, 0);
+	}
+	20.66%,
+	36.32% {
+		transform: translate3d(0, -66%, 0);
+	}
+	40.32%,
+	56.98% {
+		transform: translate3d(0, -99%, 0);
+	}
+	60.98%,
+	76.64% {
+		transform: translate3d(0, -66%, 0);
+	}
+	80.64%,
+	96.3% {
+		transform: translate3d(0, -33%, 0);
+	}
 }
 
 //Animation Between Routes
-.fade-enter {
-  opacity: 0;
-  position: relative;
-  top: 0;
-  left: 100rem;
-  z-index: 1;
+
+@keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-.fade-enter.fade-enter-active {
-  opacity: 1;
-  left: 0;
-  transition: all 500ms ease-in;
+@keyframes slideOutLeft {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideOutRight {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
 }
 
 // Calendar Bouncing
