Adding Appear animation in Route

--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -53,58 +53,6 @@
 	}
 }
 
-//Animation Between Routes
-
-@keyframes slideInLeft {
-  from {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-    visibility: visible;
-  }
-
-  to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes slideOutLeft {
-  from {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  to {
-    visibility: hidden;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-@keyframes slideInRight {
-  from {
-    transform: translate3d(100%, 0, 0);
-    visibility: visible;
-  }
-
-  to {
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes slideOutRight {
-  from {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  to {
-    visibility: hidden;
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-  }
-}
-
 // Calendar Bouncing
 
 @keyframes bounce {
@@ -129,4 +77,29 @@
 	100% {
 		transform: scale(1, 1) translateY(0);
 	}
+}
+
+
+// Route Animation
+
+/* enter */
+.fade-enter {
+	opacity: 0;
+	z-index: 1;
+}
+.fade-enter.fade-enter-active {
+	opacity: 1;
+	transition: opacity 300ms linear;
+}
+
+/* exit */
+.fade-exit {
+	opacity: 1;
+}
+.fade-exit.fade-exit-active {
+	opacity: 0;
+	transition: opacity 300ms linear;
+}
+.fade-exit-done {
+	opacity: 0;
 }
