--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,5 +34,8 @@
 @import "./pages/portfolio/item/item";
 @import "./pages/portfolio/overall/overall";
 
+  //Load
+@import "./pages/load/load";
+
 // Hamburger Icons
 @import "./assets/hamburgers/hamburgers.scss";
