--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,6 +10,18 @@ html {
     font-size: 62.5%; // 1rem = 10px
     scroll-behavior: smooth;
     overflow-y: scroll;
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem = 9px
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; // 1rem = 8px
+    }
+
+    @include respond(phone) {
+        font-size: 43.8%; // 1rem = 7px
+    }
 }
 
 body {
