--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -1,3 +1,34 @@
 @mixin blurboxshadow {
   box-shadow: 1px 33px 30px -9px rgba(0,0,0,0.26);
 }
+
+// MEDIA QUERY MANAGER
+
+// 0 - 600px: PHONE
+// 600 - 900px: TABLET PORTRAIT
+// 900 - 1200px: TABLET LANDSCAPE
+// [1200 - 1800] is where our normal style apply
+// 1800 - +: BIG DESKTOP
+
+// $breakpoint argument choices:
+// - phone
+// - tab-port
+// - tab-land
+// - big-desktop
+
+// Order: Base + Typography > general layout + grid > page layout > components
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 50em) { @content }; // 800px
+  }
+  @if $breakpoint == tab-port {
+    @media only screen and (max-width: 62.5em) { @content }; // 1000px
+  }
+  @if $breakpoint == tab-land {
+    @media only screen and (max-width: 75em) { @content }; // 1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media only screen and (min-width: 112.5em) { @content }; // 1800px
+  }
+}
