--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -69,8 +69,12 @@
         font-size: 3.5rem;
       }
 
-      @include respond(phone) {
+      @include respond(large-phone) {
         font-size: 3rem;
+      }
+
+      @include respond(small-phone) {
+        font-size: 1.4rem;
       }
     }
   }
